[package]
description = "The orchestration engine for Spice.ai agentic jobs"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "agent-orchestrator"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
snafu.workspace = true
spicepod = { path = "../spicepod" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
llms = { path = "../llms" }
async-trait.workspace = true
async-openai.workspace = true
tokio.workspace = true
uuid = { workspace = true, features = ["v4", "serde", "fast-rng"]}