[package]
description = "The orchestration engine for Spice.ai agentic jobs"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "agent-orchestrator"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.86"
async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
futures-util = "0.3.31"
jsonschema = "0.29.0"
llms = { path = "../llms" }
schemars = "0.8.19"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
spicepod = { path = "../spicepod" }
tokio.workspace = true
tokio-stream = "0.1.17"
tools = { path = "../tools" }
tracing.workspace = true
util = { path = "../util" }
uuid = { workspace = true, features = ["v4", "serde", "fast-rng"] }
