[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "aws-sdk-credential-bridge"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
async-trait.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-runtime.workspace = true
aws-sdk-s3.workspace = true
aws-smithy-runtime.workspace = true
aws-smithy-runtime-api.workspace = true
iceberg.workspace = true
object_store.workspace = true
reqwest.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
util.workspace = true
url.workspace = true

[dev-dependencies]
aws-sdk-cognitoidentity.workspace = true
aws-sdk-cognitoidentityprovider.workspace = true
tempfile.workspace = true
