[package]
description = "Spice cache"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "cache"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ahash.workspace = true
arrow.workspace = true
# required until DF update to resolve dependency conflicts. See: https://github.com/apache/datafusion/issues/15342
async-compression = { version = "=0.4.19", features = [
    "tokio",
    "zstd",
], default-features = false }
async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
byte-unit.workspace = true
bytes.workspace = true
datafusion.workspace = true
fundu = { workspace = true }
futures.workspace = true
moka.workspace = true
opentelemetry.workspace = true
snafu.workspace = true
spicepod = { path = "../spicepod" }
tokio.workspace = true
tracing.workspace = true
twox-hash = { workspace = true, optional = true }

[dev-dependencies]
rstest = "0.25.0"

[features]
default = []
xxhash = ["dep:twox-hash"]
