[package]
description = "Spice cache"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "cache"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ahash.workspace = true
arrow.workspace = true
async-compression = { version = "=0.4.19", features = [
    "tokio",
    "zstd",
], default-features = false }
async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
blake3 = "1.5"
byte-unit.workspace = true
bytes.workspace = true
datafusion.workspace = true
fundu = { workspace = true }
futures.workspace = true
moka = { workspace = true, features = ["future"] }
opentelemetry.workspace = true
parking_lot.workspace = true
pingora-lru = { workspace = true, optional = true }
snafu.workspace = true
spicepod = { path = "../spicepod" }
tokio.workspace = true
tracing.workspace = true
twox-hash = { workspace = true }

[dev-dependencies]
blake3 = "1.8"
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
rand = "0.8"
rstest = "0.25.0"
tokio = { workspace = true, features = ["rt-multi-thread"] }
twox-hash = { workspace = true }

[features]
default = []
pingora = ["dep:pingora-lru"]

[[bench]]
harness = false
name = "cache_throughput"

[[bench]]
harness = false
name = "hash_algorithms"
